[gd_scene load_steps=41 format=1]

[ext_resource path="res://Character.gd" type="Script" id=1]
[ext_resource path="res://Sprites/characters/Player character.png" type="Texture" id=2]
[ext_resource path="res://Sounds/chute_.wav" type="Sample" id=3]
[ext_resource path="res://Sounds/coup_et_blessure.wav" type="Sample" id=4]
[ext_resource path="res://Sounds/metalClick.wav" type="Sample" id=5]
[ext_resource path="res://Sounds/stepdirt_1.wav" type="Sample" id=6]
[ext_resource path="res://Sounds/stepdirt_2.wav" type="Sample" id=7]
[ext_resource path="res://Sounds/stepdirt_3.wav" type="Sample" id=8]
[ext_resource path="res://Sounds/stepdirt_4.wav" type="Sample" id=9]
[ext_resource path="res://Sounds/stepdirt_5.wav" type="Sample" id=10]
[ext_resource path="res://Sounds/stepdirt_6.wav" type="Sample" id=11]
[ext_resource path="res://Sounds/stepdirt_7.wav" type="Sample" id=12]
[ext_resource path="res://Sounds/stepdirt_8.wav" type="Sample" id=13]
[ext_resource path="res://Sounds/stepstone_1.wav" type="Sample" id=14]
[ext_resource path="res://Sounds/stepstone_2.wav" type="Sample" id=15]
[ext_resource path="res://Sounds/stepstone_3.wav" type="Sample" id=16]
[ext_resource path="res://Sounds/stepstone_4.wav" type="Sample" id=17]
[ext_resource path="res://Sounds/stepstone_5.wav" type="Sample" id=18]
[ext_resource path="res://Sounds/stepstone_6.wav" type="Sample" id=19]
[ext_resource path="res://Sounds/stepstone_7.wav" type="Sample" id=20]
[ext_resource path="res://Sounds/stepstone_8.wav" type="Sample" id=21]
[ext_resource path="res://Sounds/stepwood_02.wav" type="Sample" id=22]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.2628
height = 0.346205

[sub_resource type="Animation" id=2]

resource/name = "Hurt"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 260, 261, 262, 263, 264, 265 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SamplePlayer:play/play")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.3 ),
"transitions": FloatArray( 1 ),
"update": 2,
"values": [ "chute_" ]
}

[sub_resource type="Animation" id=3]

resource/name = "Slash_left"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 169, 170, 171, 172, 173, 174 ]
}

[sub_resource type="Animation" id=4]

resource/name = "Slash_right"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 195, 196, 197, 198, 199, 200 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SamplePlayer:play/play")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.4 ),
"transitions": FloatArray( 1 ),
"update": 2,
"values": [ "coup_et_blessure" ]
}

[sub_resource type="Animation" id=5]

resource/name = "Stand"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 265, 264, 263, 262, 261, 260 ]
}

[sub_resource type="Animation" id=6]

length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 131, 132, 133, 134, 135, 136, 137, 138 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightOccluderFace:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightOccluderLeft:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluderRight:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.1, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_step_sound"
}, {
"args": [  ],
"method": "play_step_sound"
} ]
}

[sub_resource type="Animation" id=7]

length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 118, 119, 120, 121, 122, 123, 124, 125 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightOccluderFace:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightOccluderLeft:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluderRight:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.1, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_step_sound"
}, {
"args": [  ],
"method": "play_step_sound"
} ]
}

[sub_resource type="Animation" id=8]

length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 143, 144, 145, 146, 147, 148, 149, 150 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightOccluderFace:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightOccluderLeft:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluderRight:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.1, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_step_sound"
}, {
"args": [  ],
"method": "play_step_sound"
} ]
}

[sub_resource type="Animation" id=9]

length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 105, 106, 107, 108, 109, 110, 111, 112 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightOccluderFace:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightOccluderLeft:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluderRight:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.1, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_step_sound"
}, {
"args": [  ],
"method": "play_step_sound"
} ]
}

[sub_resource type="OccluderPolygon2D" id=10]

closed = true
cull_mode = 0
polygon = Vector2Array( 6.37119, 19.2117, -0.0921974, 21.674, -6.9403, 18.9039, -6.17085, 12.6714, -9.63337, 11.3633, -10.4028, 5.59244, -7.70975, 0.283241, -5.01668, 0.514099, -5.01668, -1.0248, -7.70975, -2.48676, -6.9403, -8.48846, -3.63167, -11.6432, 2.9856, -11.7202, 6.75591, -8.10374, 7.67924, -2.33287, 5.14006, -0.793966, 4.90923, 0.283264, 7.37147, 1.05269, 9.83371, 4.43827, 10.2184, 12.3636, 5.98646, 13.9025 )

[sub_resource type="OccluderPolygon2D" id=11]

closed = true
cull_mode = 0
polygon = Vector2Array( 4.60145, 20.4428, -5.63223, 19.4425, -6.2478, 17.365, -6.17085, 12.6714, -6.2478, 10.6708, -6.40169, 6.36192, -5.24751, 2.36078, -5.01668, 0.514099, -5.01668, -1.0248, -6.40168, -2.94845, -6.24779, -8.18071, -3.63167, -11.6432, 2.9856, -11.7202, 6.75591, -8.10374, 6.67896, -2.8715, 5.14006, -0.793966, 4.90923, 0.283264, 6.44813, 2.36075, 7.6023, 4.05354, 8.4487, 10.5169, 7.37147, 12.7483 )

[sub_resource type="OccluderPolygon2D" id=12]

closed = true
cull_mode = 0
polygon = Vector2Array( 7.6023, 19.6734, -5.70918, 20.9814, -8.40225, 18.3653, -8.55614, 12.5175, -9.78726, 9.59358, -9.1717, 4.05354, -6.86335, 1.28353, -5.01668, 0.514099, -5.01668, -1.0248, -7.70975, -2.48676, -6.9403, -8.48846, -3.24694, -11.0277, 2.67783, -11.3355, 6.0634, -7.71904, 6.14035, -2.48678, 5.14006, -0.793966, 4.90923, 0.283264, 4.98617, 1.97605, 5.21701, 4.2844, 4.52451, 8.97802, 5.29395, 12.8253 )

[sub_resource type="CapsuleShape2D" id=13]

custom_solver_bias = 0.0
radius = 18.8073
height = 20.0

[sub_resource type="Animation" id=14]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SampleLibrary" id=15]

samples/chute_ = {
"db": 0.0,
"pitch": 1.0,
"priority": 1,
"sample": ExtResource( 3 )
}
samples/coup_et_blessure = {
"db": 24.0,
"pitch": 1.5,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/metalClick = {
"db": 24.0,
"pitch": 7.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/stepdirt_1 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/stepdirt_2 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/stepdirt_3 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/stepdirt_4 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/stepdirt_5 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/stepdirt_6 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/stepdirt_7 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/stepdirt_8 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/stepstone_1 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}
samples/stepstone_2 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 15 )
}
samples/stepstone_3 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}
samples/stepstone_4 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/stepstone_5 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 18 )
}
samples/stepstone_6 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 19 )
}
samples/stepstone_7 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 20 )
}
samples/stepstone_8 = {
"db": -17.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 21 )
}
samples/stepwood_1 = {
"db": -13.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 22 )
}
samples/stepwood_2 = {
"db": -10.0,
"pitch": 2.0,
"priority": 0,
"sample": ExtResource( 22 )
}

[sub_resource type="ConvexPolygonShape2D" id=16]

custom_solver_bias = 0.0
points = Vector2Array( 8.46745, 3.57799, 9.41213, 7.78611, 8.38157, 14.2271, 5.97693, 19.9811, -6.90508, 19.7234, -5.78864, 12.3378, 6.74985, 1.68863 )

[sub_resource type="ConvexPolygonShape2D" id=17]

custom_solver_bias = 0.0
points = Vector2Array( 6.74985, 1.68863, -5.78864, 12.3378, -8.5368, 12.5954, -10.1685, 11.0496, -9.05208, 1.94627, -7.07684, 0.0569066, 7.35101, -3.3783 )

[sub_resource type="ConvexPolygonShape2D" id=18]

custom_solver_bias = 0.0
points = Vector2Array( 7.35101, -3.3783, -7.07684, 0.0569066, -7.678, -6.98526, -3.8134, -11.5369, 2.45585, -11.5369, 6.74985, -8.18758 )

[node name="Character" type="KinematicBody2D"]

transform/scale = Vector2( 1.1, 1.1 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.65, 0, 0, 0.65, -0.264517, 15.6859 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
ceil_value = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Hurt = SubResource( 2 )
anims/Slash_left = SubResource( 3 )
anims/Slash_right = SubResource( 4 )
anims/Stand = SubResource( 5 )
anims/Walk_down = SubResource( 6 )
anims/Walk_left = SubResource( 7 )
anims/Walk_right = SubResource( 8 )
anims/Walk_up = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )
vframes = 21
hframes = 13
frame = 199
region_rect = Rect2( 0, 0, 580, 70 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.264517, 15.6859 )
transform/scale = Vector2( 0.65, 0.65 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="LightOccluderFace" type="LightOccluder2D" parent="."]

occluder = SubResource( 10 )
light_mask = 15

[node name="LightOccluderLeft" type="LightOccluder2D" parent="."]

visibility/visible = false
occluder = SubResource( 11 )
light_mask = 15

[node name="LightOccluderRight" type="LightOccluder2D" parent="."]

visibility/visible = false
occluder = SubResource( 12 )
light_mask = 15

[node name="InteractionArea" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 13 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.682064, 2.8135 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]

transform/pos = Vector2( 0.682064, 2.8135 )
shape = SubResource( 13 )
trigger = false
_update_shape_index = 0

[node name="FadePlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Fade = SubResource( 14 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 15 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 7
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 0
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="PlayerDetectionArea" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 16 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 17 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 18 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerDetectionArea"]

build_mode = 0
polygon = Vector2Array( -6.90508, 19.7234, -5.78864, 12.3378, -8.5368, 12.5954, -10.1685, 11.0496, -9.05208, 1.94627, -7.07684, 0.0569066, -7.678, -6.98526, -3.8134, -11.5369, 2.45585, -11.5369, 6.74985, -8.18758, 7.35101, -3.3783, 6.74985, 1.68863, 8.46745, 3.57799, 9.41213, 7.78611, 8.38157, 14.2271, 5.97693, 19.9811 )
shape_range = Vector2( 0, 2 )
trigger = false

[connection signal="area_enter" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_area_enter"]

[connection signal="area_exit" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_area_exit"]


